--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,52 @@
 @import "~normalize.css";
 
-@import "_variables";
-@import "modules/hello.scss";
 
-body {
-  background: $wtf;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+/*RESET-m.korsan idea*/
+html {
+  box-sizing: border-box;
 }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+body{
+  background-image: url('/src/assets/img/mlu__background.png');
+}
+
+
+/*BODY AND MAIN*/
+main {
+  margin: 0 auto;
+  max-width: 1000px;
+  margin-top: 69px;
+  @media screen and (max-width: 1010px) {
+    margin: 0 16px;
+  }
+  @media screen and (max-width: 768px) {
+    margin-top: 56px;
+  }
+  @media screen and (max-width: 425px) {
+    margin-top: 46px;
+  }
+  @media screen and (max-width: 320px) {
+    margin-top: 36px;
+  }
+}
+section{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+footer{
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
+
+}
+img{
+
+  height: 80px;
+  width: 1024px;
+}
+
