--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,5 @@
 @import "~normalize.css";
 
-
 /*RESET-m.korsan idea*/
 html {
   box-sizing: border-box;
@@ -10,43 +9,40 @@ html {
 *:after {
   box-sizing: inherit;
 }
-body{
-  background-image: url('/src/assets/img/mlu__background.png');
-}
-
 
 /*BODY AND MAIN*/
-main {
+.body {
+  background-image: url("/src/assets/img/mlu__background.png");
+  color: greenyellow;
+}
+.main {
   margin: 0 auto;
-  max-width: 1000px;
-  margin-top: 69px;
-  @media screen and (max-width: 1010px) {
-    margin: 0 16px;
-  }
-  @media screen and (max-width: 768px) {
-    margin-top: 56px;
-  }
-  @media screen and (max-width: 425px) {
-    margin-top: 46px;
-  }
-  @media screen and (max-width: 320px) {
-    margin-top: 36px;
-  }
-}
-section{
-display: flex;
-justify-content: center;
-align-items: center;
-}
-footer{
   display: flex;
-  justify-content: end;
-  align-items: flex-end;
-
+  justify-content: space-around;
+  align-items: space-around;
 }
-img{
-
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.editor {
+  height: 596px;
+  width: 386px;
+  border: 4px solid greenyellow;
+  border-radius: 30px;
+  background: white;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.image {
   height: 80px;
-  width: 1024px;
+  width: 100vw;
+  &--special {
+    height: 596px;
+    width: 386px;
+  }
 }
-
