--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import "~normalize.css";
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 
 /*RESET-m.korsan idea*/
 html {
@@ -10,39 +11,98 @@ html {
   box-sizing: inherit;
 }
 
-/*BODY AND MAIN*/
+/*BODY*/
 .body {
-  background-image: url("/src/assets/img/mlu__background.png");
-  color: greenyellow;
-}
-.main {
-  margin: 0 auto;
+  background-image: url("/src/assets/img/editor__background.png");
+  background-repeat: repeat;
+  background-size: contain;
+  background-position: center;
+  color: black;
+  font-family: 'VT323', monospace;
   display: flex;
-  justify-content: space-around;
-  align-items: space-around;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
 }
-.section {
+
+/*MAIN*/
+.main {
+  margin: 0;
+  width: 100%;
+}
+
+/*HEADER*/
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #1dc1ad;
+  height: 36px;
+  width: 100%;
+  border-bottom: 4px groove #1dc1ad;
+  &__title {
+    font-size: 24px;
+    text-shadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
+    font-weight: lighter;
+  }
 }
-.editor {
-  height: 596px;
-  width: 386px;
-  border: 4px solid greenyellow;
-  border-radius: 30px;
-  background: white;
+
+/*EDITOR-AREA*/
+.editor-area {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 200px;
+    width: 200px;
+    border-radius: 100%;
+    border: none;
+    background: #1dc1ad;
+    font-size: 16px;
+    text-shadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
+    cursor: pointer;
+    &:active {
+      background: #3ee261;
+    }
+    &--load {
+      &:active {
+        background: #d2e23e;
+      }
+    }
+  }
+  &__description {
+    max-height: 100%;
+  }
 }
+.image {
+  margin-top: 16px;
+  height: 100px;
+  width: 100px;
+}
+.input {
+  text-align: center;
+  width: 500px;
+  height: 500px;
+  border-radius: 100%;
+  border: 40px ridge #1dc1ad;
+}
+/*FOOTER*/
 .footer {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.image {
-  height: 80px;
-  width: 100vw;
-  &--special {
-    height: 596px;
-    width: 386px;
+  background: #1dc1ad;
+  height: 36px;
+  width: 100%;
+  border-top: 4px ridge #1dc1ad;
+  &__description {
+    font-size: 16px;
+    text-shadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
   }
 }
