--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,7 +13,7 @@ html {
 
 /*BODY*/
 .body {
-  background-image: url("src/assets/img/editor__background.png");
+  background-image: url("../assets/img/editor__background.png");
   background-repeat: repeat;
   background-size: contain;
   background-position: center;
