--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,16 @@
 @import "~normalize.css";
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 
+/*RESET-m.korsan idea*/
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 /*BODY*/
 .body {
   display: flex;
@@ -114,6 +124,7 @@
     border-radius: 100%;
     border: 40px ridge #1dc1ad;
     outline: none;
+    padding: auto 0;
     @media (max-width: 1024px) {
       height: 400px;
       width: 400px;
