--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -56,6 +56,9 @@ html {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  @media (max-width: 500px) {
+    flex-direction: column;
+  }
 
   &__button {
     display: flex;
@@ -74,11 +77,12 @@ html {
     border-left: 6px solid white;
     border-right: 6px solid #106d61;
     text-shadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
+    margin: 40px 10px;
     @media (max-width: 1024px) {
       height: 160px;
       width: 160px;
     }
-    @media (max-width: 836px) {
+    @media (max-width: 800px) {
       height: 120px;
       width: 120px;
     }
@@ -90,23 +94,8 @@ html {
       border-left: 5px solid white;
       border-right: 5px solid #106d61;
     }
-    @media (max-width: 500px) {
-      height: 60px;
-      width: 60px;
-      font-size: 10px;
-      border-bottom: 3px solid #106d61;
-      border-top: 3px solid white;
-      border-left: 3px solid white;
-      border-right: 3px solid #106d61;
-    }
-    @media (max-width: 375px) {
-      height: 30px;
-      width: 30px;
-      font-size: 6px;
-      border-bottom: 2px solid #106d61;
-      border-top: 2px solid white;
-      border-left: 2px solid white;
-      border-right: 2px solid #106d61;
+    @media (max-height: 740px) {
+      margin: 10px 10px;
     }
     &:active {
       background: #ef929e;
@@ -118,38 +107,35 @@ html {
     }
   }
   &__textarea {
+    resize: none;
+line-height: 400px;
     text-align: center;
     width: 500px;
     height: 500px;
     border-radius: 100%;
     border: 40px ridge #1dc1ad;
     outline: none;
-    padding: auto 0;
+    margin: 40px 20px;
     @media (max-width: 1024px) {
       height: 400px;
       width: 400px;
       border: 30px ridge #1dc1ad;
+      line-height: 320px;
     }
-    @media (max-width: 836px) {
+    @media (max-width: 800px) {
       height: 300px;
       width: 300px;
       border: 20px ridge #1dc1ad;
+      line-height: 240px;
     }
     @media (max-width: 610px) {
       height: 250px;
       width: 250px;
       border: 15px ridge #1dc1ad;
+      line-height: 200px;
     }
-    @media (max-width: 500px) {
-      height: 200px;
-      width: 200px;
-      border: 10px ridge #1dc1ad;
-    }
-    @media (max-width: 375px) {
-      height: 100px;
-      width: 100px;
-      font-size: 6px;
-      border: 6px ridge #1dc1ad;
+    @media (max-height: 740px) {
+      margin: 10px 20px;
     }
   }
 }
@@ -161,22 +147,13 @@ html {
     height: 80px;
     width: 80px;
   }
-  @media (max-width: 836px) {
+  @media (max-width: 800px) {
     height: 60px;
     width: 60px;
   }
   @media (max-width: 610px) {
     height: 40px;
     width: 40px;
-  }
-  @media (max-width: 500px) {
-    height: 20px;
-    width: 20px;
-    margin-top: 4px;
-  }
-  @media (max-width: 375px) {
-    height: 10px;
-    width: 10px;
   }
 }
 
