--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -59,7 +59,7 @@ html {
   @media (max-width: 500px) {
     flex-direction: column;
   }
-
+  /*button*/
   &__button {
     display: flex;
     justify-content: center;
@@ -78,6 +78,17 @@ html {
     border-right: 6px solid #106d61;
     text-shadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
     margin: 40px 10px;
+    transition-duration: 0.4s;
+    &:active {
+      transition-duration: 0.05s;
+      background: #ef929e;
+      transform: rotate(4deg);
+      border-bottom: 6px solid white;
+      border-top: 6px solid #e23e52;
+      border-left: 6px solid #e23e52;
+      border-right: 6px solid white;
+      outline: none;
+    }
     @media (max-width: 1024px) {
       height: 160px;
       width: 160px;
@@ -97,18 +108,11 @@ html {
     @media (max-height: 740px) {
       margin: 10px 10px;
     }
-    &:active {
-      background: #ef929e;
-      transform: rotate(4deg);
-      border-bottom: 6px solid white;
-      border-top: 6px solid #e23e52;
-      border-left: 6px solid #e23e52;
-      border-right: 6px solid white;
-    }
   }
+  /*textarea*/
   &__textarea {
     resize: none;
-line-height: 400px;
+    line-height: 400px;
     text-align: center;
     width: 500px;
     height: 500px;
@@ -140,6 +144,7 @@ line-height: 400px;
   }
 }
 
+/*IMAGE INSIDE BUTTON*/
 .image {
   height: 100px;
   width: 100px;
@@ -154,6 +159,15 @@ line-height: 400px;
   @media (max-width: 610px) {
     height: 40px;
     width: 40px;
+  }
+}
+
+/*COUNTER*/
+.charCount {
+  position: absolute;
+  padding-top: 40px;
+  &::after {
+    content: "/60";
   }
 }
 
