feat: add modules, update styles: header + footer, add flicker animation

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,6 @@
-$wtf: #2D2241;
+$blackText: #000000;
+$greanBlue: #1dc1ad;
+$whiteText: #ffffff;
+
+$lightShadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
+$darkShadow: 2px 1px 2px rgba(29, 28, 28, 0.719);
