--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,16 @@
 @import "~normalize.css";
+@import "_variables.scss";
+
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
+
+@import "modules/editor.scss";
+@import "modules/footer.scss";
+@import "modules/header.scss";
 
 /*RESET-m.korsan idea*/
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 *,
 *:before,
@@ -13,186 +20,11 @@ html {
 
 /*BODY*/
 .body {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
   background-image: url("../assets/img/editor__background.png");
   background-repeat: repeat;
   background-size: contain;
   background-position: center;
-  color: black;
+  color: $blackText;
   font-family: "VT323", monospace;
-  text-shadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
-  min-height: 100vh;
 }
 
-/*MAIN*/
-.main {
-  width: 100%;
-}
-
-/*HEADER*/
-.header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #1dc1ad;
-  height: 36px;
-  width: 100%;
-  border-bottom: 4px groove #1dc1ad;
-  &__title {
-    font-size: 24px;
-    font-weight: lighter;
-    margin: auto 0;
-    @media (max-width: 320px) {
-      font-size: 20px;
-    }
-  }
-}
-
-/*EDITOR-AREA*/
-.editor-area {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  @media (max-width: 500px) {
-    flex-direction: column;
-  }
-  /*button*/
-  &__button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 200px;
-    width: 200px;
-    border-radius: 100%;
-    background: #1dc1ad;
-    font-size: 16px;
-    outline: none;
-    cursor: pointer;
-    border-bottom: 6px solid #106d61;
-    border-top: 6px solid white;
-    border-left: 6px solid white;
-    border-right: 6px solid #106d61;
-    text-shadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
-    margin: 40px 10px;
-    transition-duration: 0.4s;
-    &:active {
-      transition-duration: 0.05s;
-      background: #ef929e;
-      transform: rotate(4deg);
-      border-bottom: 6px solid white;
-      border-top: 6px solid #e23e52;
-      border-left: 6px solid #e23e52;
-      border-right: 6px solid white;
-      outline: none;
-    }
-    @media (max-width: 1024px) {
-      height: 160px;
-      width: 160px;
-    }
-    @media (max-width: 800px) {
-      height: 120px;
-      width: 120px;
-    }
-    @media (max-width: 610px) {
-      height: 90px;
-      width: 90px;
-      border-bottom: 5px solid #106d61;
-      border-top: 5px solid white;
-      border-left: 5px solid white;
-      border-right: 5px solid #106d61;
-    }
-    @media (max-height: 740px) {
-      margin: 10px 10px;
-    }
-  }
-  /*textarea*/
-  &__textarea {
-    resize: none;
-    line-height: 400px;
-    text-align: center;
-    width: 500px;
-    height: 500px;
-    border-radius: 100%;
-    border: 40px ridge #1dc1ad;
-    outline: none;
-    margin: 40px 20px;
-    @media (max-width: 1024px) {
-      height: 400px;
-      width: 400px;
-      border: 30px ridge #1dc1ad;
-      line-height: 320px;
-    }
-    @media (max-width: 800px) {
-      height: 300px;
-      width: 300px;
-      border: 20px ridge #1dc1ad;
-      line-height: 240px;
-    }
-    @media (max-width: 610px) {
-      height: 250px;
-      width: 250px;
-      border: 15px ridge #1dc1ad;
-      line-height: 200px;
-    }
-    @media (max-height: 740px) {
-      margin: 10px 20px;
-    }
-  }
-}
-
-/*IMAGE INSIDE BUTTON*/
-.image {
-  height: 100px;
-  width: 100px;
-  @media (max-width: 1024px) {
-    height: 80px;
-    width: 80px;
-  }
-  @media (max-width: 800px) {
-    height: 60px;
-    width: 60px;
-  }
-  @media (max-width: 610px) {
-    height: 40px;
-    width: 40px;
-  }
-}
-
-/*COUNTER*/
-.charCount {
-  position: absolute;
-  padding-top: 40px;
-  &::after {
-    content: "/30";
-  }
-}
-
-/*FOOTER*/
-.footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #1dc1ad;
-  height: 36px;
-  width: 100%;
-  border-top: 4px ridge #1dc1ad;
-  &__description {
-    font-size: 18px;
-    margin: auto 0;
-    @media (max-width: 320px) {
-      font-size: 16px;
-    }
-  }
-  &__link {
-    color: white;
-    text-decoration: none;
-    text-shadow: 2px 1px 2px rgba(12, 11, 11, 0.719);
-    &:active {
-      color: #106d61;
-    }
-  }
-}
