feat: update all styles and html, add saveCount JS function, delete media queries

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,9 @@
 $blackText: #000000;
+$darkGreenBlue: #106d61;
 $greanBlue: #1dc1ad;
 $whiteText: #ffffff;
+$pink: #ef929e;
+$red: #e23e52;
 
 $lightShadow: 2px 1px 2px rgba(255, 255, 255, 0.719);
 $darkShadow: 2px 1px 2px rgba(29, 28, 28, 0.719);
