--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,10 +20,6 @@ html {
 
 /*BODY*/
 .body {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 100vh;
   background-image: url("../assets/img/editor__background.png");
   background-repeat: repeat;
   background-size: contain;
@@ -33,6 +29,9 @@ html {
 }
 
 .main {
-  display: block;
-  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
 }
