--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -10,7 +10,7 @@
     font-size: 34px;
     font-weight: lighter;
     text-shadow: $lightShadow;
-    padding: 3px 0 3px 0;
+    padding: 3px 0 0;
     margin: 0 auto;
   }
 }
