--- a/src/scss/modules/footer.scss
+++ b/src/scss/modules/footer.scss
@@ -3,7 +3,7 @@
   height: 46px;
   width: 100%;
   border-top: 4px ridge $greanBlue;
-  margin: 0;
+  margin: 110px 0 0 0;
   padding: 0;
   &__description {
     text-align: center;
