--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -3,7 +3,7 @@
   height: 46px;
   width: 100%;
   border-bottom: 4px groove $greanBlue;
-  margin: 0;
+  margin: 0 0 110px 0;
   padding: 0;
   &__title {
     text-align: center;
