--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -5,6 +5,9 @@
   border-bottom: 4px groove $greanBlue;
   margin: 0 0 110px 0;
   padding: 0;
+  @media (max-width: 1060px) {
+    margin: 0 0 10px 0;
+  }
   &__title {
     text-align: center;
     font-size: 34px;
